# revive-companion

./: README.md  TODO.md  mkdocs.yml  pyproject.toml
demo/: app.py  requirements.txt
docs/: api.md  architecture.md  configuration.md  getting-started.md  index.md  integrations.md
examples/: full_pipeline_demo.py  optimal_stop_demo.py  pcpx.yaml  quickstart.py  simulation_log.json
src/poisson_love/: __init__.py  runner.py
src/poisson_love/adapters/: __init__.py  anthropic.py  base.py  openai.py
src/poisson_love/core/: config.py  models.py
src/poisson_love/optimal_stop/: __init__.py  core.py
src/revive_companion/: __init__.py  storage.py
